--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+matplotlib = "^3.10.0"
+pytest = "^8.3.4"
 
 [tool.semantic_release]
 version_toml = [
