--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ python = "^3.11"
 matplotlib = "^3.10.0"
 pytest = "^8.3.4"
 
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^6.0.0"
+myst-nb = {version = "^1.1.2", python = "^3.11"}
+sphinx-autoapi = "^3.4.0"
+sphinx-rtd-theme = "^3.0.2"
+
 [tool.semantic_release]
 version_toml = [
     "pyproject.toml:tool.poetry.version",
