--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.11"
 matplotlib = "^3.10.0"
 pytest = "^8.3.4"
+opencv-python = "^4.11.0.86"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
