--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ matplotlib = "^3.10.0"
 pytest = "^8.3.4"
 opencv-python = "^4.11.0.86"
 pytest-cov = "^6.0.0"
+sphinx = "^8.1.3"
+sphinx-rtd-theme = "^3.0.2"
+nbsphinx = "^0.9.6"
+pillow = "^11.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
