--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sphinx-rtd-theme = "^3.0.2"
 nbsphinx = "^0.9.6"
 pillow = "^11.1.0"
 pandoc = "^2.4"
+pypandoc = "^1.15"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
