--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ nbsphinx = "^0.9.6"
 pillow = "^11.1.0"
 pandoc = "^2.4"
 pypandoc = "^1.15"
+jupyter = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
