--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pillow = "^11.1.0"
 pandoc = "^2.4"
 pypandoc = "^1.15"
 jupyter = "^1.1.1"
+sphinx-book-theme = "^1.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
